# ml-agent

./: .gitignore  README.md  pyproject.toml
docs/: RULE.md  analytic-subgraph.md  ml-code-architecture.md  node_specifications.md
script/: copy.js
src/: main.py
src/utils/: __init__.py  grab_data.py  sandbox.py
src/workflow/: graph.py  state.py
src/workflow/analytics_subgraphs/: data_analytics_subgraph.py
src/workflow/analytics_subgraphs/nodes/: clone_dataset.py  combine_datasets.py  dataset_auditor.py  model_strategist.py  single_file_cleaner.py  splitter_export.py
src/workflow/ml_subgraph/: ml_architect_subgraph.py
src/workflow/ml_subgraph/nodes/: code_self_healer.py  docker_sandbox_executor.py  llm_prediction_validator.py  ml_script_architect.py  script_io_writer.py
src/workflow/nodes/: analyze_algorithm.py  clone_dataset.py  data_preprocessor.py  dataset_validator.py  generate_eval_script.py  ml_architect.py  sandbox_executor.py  scenario_generator.py  scenario_test_runner.py  select_algorithm.py
src/workflow/subgraphs/: data_analytics_subgraph.py
src/workflow/subgraphs/nodes/: dataset_auditor.py  model_strategist.py
