[project]
name = "ml-agent"
version = "0.1.0"
description = "Automated Machine Learning Pipeline with LLM-powered orchestration and Docker sandboxing"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docker>=7.1.0",
    "joblib>=1.5.3",
    "langchain>=1.3.6",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "xgboost>=3.2.0",
]

[tool.uv.workspace]
members = [
    ".temp/ml_agent_b78761f7",
    ".temp/ml_agent_f1ee6f6b",
    ".temp/ml_agent_2def2aae",
    ".temp/ml_agent_fdb691d1",
    ".temp/ml_agent_4d334dd9",
    ".temp/ml_agent_77e4dc9f",
    ".temp/ml_agent_98b44480",
    ".temp/ml_agent_3b7b998f",
    ".temp/ml_agent_c0dbe983",
    ".temp/ml_agent_ec2df7cc",
    ".temp/ml_agent_03204f7e",
    ".temp/ml_agent_264a0b16",
    ".temp/ml_agent_b414351a",
]
