[project]
name = "ml-agent"
version = "0.1.0"
description = "Automated Machine Learning Pipeline with LLM-powered orchestration and Docker sandboxing"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docker>=7.1.0",
    "joblib>=1.5.3",
    "langchain>=1.3.6",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "xgboost>=3.2.0",
]